# diction-c

./: .gitignore  README.md  a.out  buggy.txt  diction_cache_related.txt  issue.txt  meson.build  todo2.txt  todo_aqueel.txt
data/: io.github.fastrizwaan.diction.metainfo.xml
flatpak/: io.github.fastrizwaan.diction.yaml
helpers/: inspect.py  inspect2.py  mdx_langpair.c
src/: dict-bgl.c  dict-cache-builder.c  dict-cache-builder.h  dict-cache.c  dict-cache.h  dict-chunked.c  dict-chunked.h  dict-dsl.c  dict-fts-index.c  dict-fts-index.h  dict-ifo.c  dict-loader.c  dict-loader.h  dict-mdx.c  dict-mmap.c  dict-mmap.h  dict-render.c  dict-render.h  dict-slob.c  dict-xdxf.c  flat-index.c  flat-index.h  json-theme.c  json-theme.h  langid.c  langid.h  main.c  resource-reader.c  resource-reader.h  scan-popup.c  settings-dialog.c  settings.c  settings.h  splay-tree.c  splay-tree.h  tray-icon.c
vscode-themes/: Tokyo-Hack.json  Vim-Dark-Hard.json  adwaita-dark.json  adwaita-light.json  all-black-color-theme.json  default-dark.yaml  fitz-dark-italic-vscode-theme.json  peninsula-dark.json  peninsula.json  pink-babe-color-theme.json  printing.json  solarized-dark-color-theme.json
vscode-themes/base16/: base16-ayu-dark.json  base16-brushtrees.json  base16-catppuccin-frappe.json  base16-everforest.json  base16-tomorrow.json
vscode-themes/base24/: base24-ayu-light.json  base24-catppuccin-mocha.json  base24-gruvbox-dark.json
